--- a/CAPRabbitMQ/src/CAPRabbitMQ.Consumer.Api/CAPRabbitMQ.Consumer.Api.csproj
+++ b/CAPRabbitMQ/src/CAPRabbitMQ.Consumer.Api/CAPRabbitMQ.Consumer.Api.csproj
@@ -4,7 +4,6 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +11,7 @@
 	  <PackageReference Include="DotNetCore.CAP.Dashboard" Version="7.2.2" />
 	  <PackageReference Include="DotNetCore.CAP.InMemoryStorage" Version="7.2.2" />
 	  <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="7.2.2" />
+	  <PackageReference Include="DotNetCore.CAP.SqlServer" Version="7.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
