--- a/CAPRabbitMQ/src/CAPRabbitMQ.Consumer.Api/appsettings.json
+++ b/CAPRabbitMQ/src/CAPRabbitMQ.Consumer.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CapConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CAP;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
