--- a/CAPRabbitMQ/src/CAPRabbitMQ.Publisher.Api/CAPRabbitMQ.Publisher.Api.csproj
+++ b/CAPRabbitMQ/src/CAPRabbitMQ.Publisher.Api/CAPRabbitMQ.Publisher.Api.csproj
@@ -1,18 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="DotNetCore.CAP" Version="7.2.2" />
-    <PackageReference Include="DotNetCore.CAP.Dashboard" Version="7.2.2" />
-    <PackageReference Include="DotNetCore.CAP.InMemoryStorage" Version="7.2.2" />
-    <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="7.2.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="DotNetCore.CAP.SqlServer" Version="7.2.2" />
+		<PackageReference Include="DotNetCore.CAP" Version="7.2.2" />
+		<PackageReference Include="DotNetCore.CAP.Dashboard" Version="7.2.2" />
+		<PackageReference Include="DotNetCore.CAP.InMemoryStorage" Version="7.2.2" />
+		<PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="7.2.2" />
+		<PackageReference Include="Hangfire.AspNetCore" Version="1.8.7" />
+		<PackageReference Include="Hangfire.Core" Version="1.8.7" />
+		<PackageReference Include="Hangfire.SqlServer" Version="1.8.7" />
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	</ItemGroup>
 
 </Project>
